--- a/templates/aiotraq/pyproject.toml.jinja
+++ b/templates/aiotraq/pyproject.toml.jinja
@@ -16,6 +16,7 @@ packages = [
 ]
 include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]
 {% endif %}
+repository = "https://github.com/toshi-pono/aiotraq"
 
 {% if pdm %}
 dependencies = [
