--- a/templates/aiotraq/README.md.jinja
+++ b/templates/aiotraq/README.md.jinja
@@ -1,54 +1,60 @@
-# {{ project_name }}
+# AiotraQ
 
 Async ready traQ API Client for Python
 
+[![PyPI - Version](https://img.shields.io/pypi/v/{{ package_name }})](https://pypi.org/project/{{ package_name }}/)
+[![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://github.com/toshi-pono/aiotraq/blob/main/LICENSE)
+[![CI](https://github.com/toshi-pono/aiotraq/actions/workflows/ci.yml/badge.svg)](https://github.com/toshi-pono/aiotraq/actions/workflows/ci.yml)
+
+## Installation
+
+```bash
+pip install {{ package_name }}
+```
+
 ## Usage
-First, create a client:
+
+`AuthenticatedClient`を用いて API クライアントを作成し API を叩くことができます。
 
 ```python
-from {{ package_name }} import Client
-
-client = Client(base_url="https://api.example.com")
-```
-
-If the endpoints you're going to hit require authentication, use `AuthenticatedClient` instead:
-
-```python
+import os
 from {{ package_name }} import AuthenticatedClient
+from {{ package_name }}.api.channel import get_channels
 
-client = AuthenticatedClient(base_url="https://api.example.com", token="SuperSecretToken")
-```
+BOT_ACCESS_TOKEN = os.getenv("BOT_ACCESS_TOKEN")
+assert BOT_ACCESS_TOKEN is not None
 
-Now call your endpoint and use your models:
-
-```python
-from {{ package_name }}.models import MyDataModel
-from {{ package_name }}.api.my_tag import get_my_data_model
-from {{ package_name }}.types import Response
+client = AuthenticatedClient(base_url="https://q.trap.jp/api/v3", token=BOT_ACCESS_TOKEN)
 
 with client as client:
-    my_data: MyDataModel = get_my_data_model.sync(client=client)
-    # or if you need more info (e.g. status_code)
-    response: Response[MyDataModel] = get_my_data_model.sync_detailed(client=client)
+    channels = get_channels.sync_detailed(client=client)
+    print(channels.status_code)
 ```
 
-Or do the same thing with an async version:
+API の利用例: チャンネル一覧の取得
 
 ```python
-from {{ package_name }}.models import MyDataModel
-from {{ package_name }}.api.my_tag import get_my_data_model
-from {{ package_name }}.types import Response
-
-async with client as client:
-    my_data: MyDataModel = await get_my_data_model.asyncio(client=client)
-    response: Response[MyDataModel] = await get_my_data_model.asyncio_detailed(client=client)
+with client as client:
+    channels: ChannelList = get_channels.sync(client=client)
+    # status_code などの情報も利用したい場合
+    response: Response[ChannelList] = get_channels.sync_detailed(client=client)
 ```
+
+非同期版も利用可能です:
+
+```python
+with client as client:
+    channels: ChannelList = await get_channels.asyncio(client=client)
+    response: Response[ChannelList] = await get_channels.asyncio_detailed(client=client)
+```
+
+## Advanced customizations
 
 By default, when you're calling an HTTPS API it will attempt to verify that SSL is working correctly. Using certificate verification is highly recommended most of the time, but sometimes you may need to authenticate to a server (especially an internal server) using a custom certificate bundle.
 
 ```python
 client = AuthenticatedClient(
-    base_url="https://internal_api.example.com", 
+    base_url="https://internal_api.example.com",
     token="SuperSecretToken",
     verify_ssl="/path/to/certificate_bundle.pem",
 )
@@ -58,24 +64,26 @@ You can also disable certificate validation altogether, but beware that **this i
 
 ```python
 client = AuthenticatedClient(
-    base_url="https://internal_api.example.com", 
-    token="SuperSecretToken", 
+    base_url="https://internal_api.example.com",
+    token="SuperSecretToken",
     verify_ssl=False
 )
 ```
 
 Things to know:
+
 1. Every path/method combo becomes a Python module with four functions:
-    1. `sync`: Blocking request that returns parsed data (if successful) or `None`
-    1. `sync_detailed`: Blocking request that always returns a `Request`, optionally with `parsed` set if the request was successful.
-    1. `asyncio`: Like `sync` but async instead of blocking
-    1. `asyncio_detailed`: Like `sync_detailed` but async instead of blocking
+
+   1. `sync`: Blocking request that returns parsed data (if successful) or `None`
+   1. `sync_detailed`: Blocking request that always returns a `Request`, optionally with `parsed` set if the request was successful.
+   1. `asyncio`: Like `sync` but async instead of blocking
+   1. `asyncio_detailed`: Like `sync_detailed` but async instead of blocking
 
 1. All path/query params, and bodies become method arguments.
 1. If your endpoint had any tags on it, the first tag will be used as a module name for the function (my_tag above)
 1. Any endpoint which did not have a tag will be in `{{ package_name }}.api.default`
 
-## Advanced customizations
+### Customizing the client
 
 There are more settings on the generated `Client` class which let you control more runtime behavior, check out the docstring on that class for more info. You can also customize the underlying `httpx.Client` or `httpx.AsyncClient` (depending on your use-case):
 
@@ -109,3 +117,7 @@ client = Client(
 # Note that base_url needs to be re-set, as would any shared cookies, headers, etc.
 client.set_httpx_client(httpx.Client(base_url="https://api.example.com", proxies="http://localhost:8030"))
 ```
+
+## Acknowledgements
+
+This project is generated using [openapi-python-client](https://github.com/openapi-generators/openapi-python-client).
