--- a/templates/aiotraq/pyproject.toml.jinja
+++ b/templates/aiotraq/pyproject.toml.jinja
@@ -7,16 +7,17 @@
 name = "{{ project_name }}"
 version = "{{ package_version }}"
 description = "Async ready traQ API Client"
-authors = []
+authors = ["toshi00"]
+license = "MIT"
 readme = "README.md"
 {% if pdm %}requires-python = ">=3.8,<4.0"{% endif %}
 {% if poetry %}
-packages = [
-    {include = "{{ package_name }}"},
-]
-include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]
+packages = [{ include = "{{ package_name }}" }]
+include = ["{{ package_name }}/py.typed"]
 {% endif %}
 repository = "https://github.com/toshi-pono/aiotraq"
+keywords = ["traQ", "API", "async", "httpx"]
+
 
 {% if pdm %}
 dependencies = [
@@ -29,16 +30,19 @@ dependencies = [
 distribution = true
 {% endif %}
 {% if poetry %}
-
-
 [tool.poetry.urls]
 "Source Code" = "https://github.com/toshi-pono/aiotraq/tree/main/libs/aiotraq"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<4.0"
 httpx = ">=0.20.0,<0.28.0"
 attrs = ">=21.3.0"
 python-dateutil = "^2.8.0"
+
+[tool.poetry.group.dev.dependencies]
+types-python-dateutil = "^2.8.0"
+mypy = "^1.10.0"
+ruff = "^0.4.7"
 {% endif %}
 
 [build-system]
@@ -50,5 +54,7 @@ requires = ["pdm-backend"]
 build-backend = "pdm.backend"
 {% endif %}
 {% endif %}{# poetry or pdm #}
+
+{% include "pyproject_mypy.toml.jinja" %}
 
 {% include "pyproject_ruff.toml.jinja" %}
