--- a/templates/aiotraq/package_init.py.jinja
+++ b/templates/aiotraq/package_init.py.jinja
@@ -1,8 +1,11 @@
 {% from "helpers.jinja" import safe_docstring %}
 
 {{ safe_docstring(package_description) }}
+from importlib.metadata import version
+
 from .client import AuthenticatedClient, Client
 
+__version__ = version(__package__)
 __all__ = (
     "AuthenticatedClient",
     "Client",
